[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/demos/demo_tile_map.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/demos/ground_enemy_ai_demo.gd" type="Script" id=2]
[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/enemies/ground_enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/hud.tscn" type="PackedScene" id=7]

[node name="GroundEnemyAIDemo" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 704, 384 )
current = true
zoom = Vector2( 1.5, 1.5 )

[node name="EnemyParent" type="Node2D" parent="."]

[node name="GroundEnemy" parent="EnemyParent" instance=ExtResource( 6 )]
position = Vector2( 675.093, 680.678 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 130.828, 558.669 )

[node name="Hud" parent="." instance=ExtResource( 7 )]

[connection signal="died" from="EnemyParent/GroundEnemy" to="." method="_on_GroundEnemy_died"]
